# backend/src/Api/wwwroot/openapi-v1.json
@@ -2600,6 +2600,29 @@
         }
       }
     },
+    "/v1/sitemap.xml": {
+      "get": {
+        "tags": [
+          "Sitemap"
+        ],
+        "operationId": "GetSitemap",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/v1/admin/reports/targets": {
       "get": {
         "tags": [
@@ -9624,6 +9647,9 @@
     },
     {
       "name": "Users"
+    },
+    {
+      "name": "Sitemap"
     },
     {
       "name": "Organizations"
